<resources>
    <string name="app_name">foodApplication</string>
    <string name="welcome">Welcome There!</string>
    <string name="subtitle">DapurKuliner is here for your culinary life.</string>
    <string name="mulai_masuk">Mulai Masuk</string>
    <string name="masuk">Masuk</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="atau_login_dengan">atau login dengan</string>
    <string name="belum_punya_akun">belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="masuk_button">Masuk</string>
    <string name="beranda">Beranda</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="chat">Chat</string>
    <string name="cari_sesuatu_yang_lezat">cari sesuatu yang lezat...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>